--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
       "@types/*": ["/src/types/*"],
       "@hooks/*": ["/src/hooks/*"],
       "@stores/*": ["/src/stores/*"],
-      "@api/*": ["/src/api/*"],
+      "@api/*": ["/src/api/*"]
     }
   },
-  "include": ["src", "**/*.ts", "**/*.tsx"],
+  "include": ["src", "**/*.ts", "**/*.tsx"]
 }
