--- a/ios/Aussie/Info.plist
+++ b/ios/Aussie/Info.plist
@@ -32,7 +32,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -43,7 +43,7 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
-		<string>FontAwesome6.ttf</string>
+		<string>FontAwesome6_Regular.ttf</string>
 		<string>FontAwesome6_Solid.ttf</string>
 		<string>FontAwesome6_Brands.ttf</string>
 	</array>
