fix (icon): vector-icons integration

--- a/android/link-assets-manifest.json
+++ b/android/link-assets-manifest.json
@@ -2,16 +2,8 @@
   "migIndex": 1,
   "data": [
     {
-      "path": "ios/fonts/FontAwesome6_Brands.ttf",
-      "sha1": "da6f537cd597b76d264970f1c95e4beebc82fde9"
-    },
-    {
-      "path": "ios/fonts/FontAwesome6_Regular.ttf",
-      "sha1": "6e7f0651059eea9783ea8b28892b2c979c2f7f30"
-    },
-    {
-      "path": "ios/fonts/FontAwesome6_Solid.ttf",
-      "sha1": "780a8ff16ebb681f85d5d30fac94ebe845a12b5e"
+      "path": "node_modules/@react-native-vector-icons/ionicons/fonts/Ionicons.ttf",
+      "sha1": "3a656ee69b64ccb1e57f1721f7659b50c1fb56ef"
     }
   ]
 }
