--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "@types/*": ["/src/types/*"],
       "@hooks/*": ["/src/hooks/*"],
       "@stores/*": ["/src/stores/*"],
+      "@theme/*": ["/src/theme/*"],
       "@api/*": ["/src/api/*"]
     }
   },
