chore (ESLint): config `mport/order` for cutomised import path pattern

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,15 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@screens/*": ["/src/screens/*"],
-      "@components/*": ["/src/components/*"],
-      "@navigations/*": ["/src/navigations/*"],
-      "@utils/*": ["/src/utils/*"],
-      "@types/*": ["/src/types/*"],
-      "@hooks/*": ["/src/hooks/*"],
-      "@stores/*": ["/src/stores/*"],
-      "@theme/*": ["/src/theme/*"],
-      "@api/*": ["/src/api/*"]
+      "screens/*": ["./src/screens/*"],
+      "components/*": ["./src/components/*"],
+      "navigation/*": ["./src/navigation/*"],
+      "utils/*": ["./src/utils/*"],
+      "types/*": ["./src/types/*"],
+      "hooks/*": ["./src/hooks/*"],
+      "stores/*": ["./src/stores/*"],
+      "theme/*": ["./src/theme/*"],
+      "api/*": ["./src/api/*"]
     }
   },
   "include": ["src", "**/*.ts", "**/*.tsx"]
