--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.6.3",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-mmkv-storage": "^12.0.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0"
