--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "components/*": ["./src/components/*"],
       "navigation/*": ["./src/navigation/*"],
       "utils/*": ["./src/utils/*"],
-      "services/*": ["./src/services/"],
+      "services/*": ["./src/services/*"],
       "types/*": ["./src/types/*"],
       "hooks/*": ["./src/hooks/*"],
       "stores/*": ["./src/stores/*"],
