chore (mvp): complete

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "services/*": ["./src/services/*"],
       "types/*": ["./src/types/*"],
       "hooks/*": ["./src/hooks/*"],
-      "stores/*": ["src/stores/*"],
+      "store/*": ["src/store/*"],
       "theme/*": ["./src/theme/*"],
       "api/*": ["./src/api/*"]
     }
