--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Run ESLint
         run: yarn lint
 
+      - name: Run TypeScript type check
+        run: yarn tsc
+
       - name: Check code formatting
         run: yarn format:check
 
