--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-mmkv-storage": "^12.0.0",
+    "react-native-reanimated": "4.1.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.6.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "babel-plugin-module-resolver": "^5.0.2",
+    "detox": "20.43.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -64,7 +67,6 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.6.3",
     "jest-circus": "29.6.3",
-    "detox": "20.43.0",
     "prettier": "^3.6.2",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
