chore (auth): integrate login & faceID & auth0

--- a/ios/Aussie/Info.plist
+++ b/ios/Aussie/Info.plist
@@ -63,6 +63,16 @@
 				<string>aussie</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>auth0</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>$(PRODUCT_BUNDLE_IDENTIFIER).auth0</string>
+			</array>
+		</dict>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Use Face ID to securely access your account</string>
 </dict>
 </plist>
