--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@react-navigation/stack": "^7.6.3",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-auth0": "^3.2.0",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-keychain": "^8.2.0",
     "react-native-mmkv-storage": "^12.0.0",
     "react-native-reanimated": "4.1.5",
     "react-native-safe-area-context": "^5.6.2",
@@ -68,6 +71,7 @@
     "jest": "^29.6.3",
     "jest-circus": "29.6.3",
     "prettier": "^3.6.2",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
   },
