--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "detox:test:ios": "detox test --configuration ios.sim.debug",
     "detox:test:android": "detox test --configuration android.emu.debug",
     "detox:test": "detox test --configuration ios.sim.debug",
-    "detox:clean": "detox clean-framework-cache && detox clean-framework-cache --configuration android.emu.debug"
+    "detox:clean": "detox clean-framework-cache && detox clean-framework-cache --configuration android.emu.debug",
+    "prepare": "husky"
   },
   "dependencies": {
     "@react-native-vector-icons/ionicons": "^12.3.0",
@@ -67,8 +68,10 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^9.1.7",
     "jest": "^29.6.3",
     "jest-circus": "29.6.3",
+    "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.0",
@@ -76,5 +79,14 @@
   },
   "engines": {
     "node": ">=22"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
